[package]
name = "field-projection-internal"
version = "0.2.0"
authors = ["Gary Guo <gary@garyguo.net>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/nbdd0121/field-projection"
description = """
Internal implementation details of crate `field-projection`.
"""

[lib]
proc_macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "visit", "visit-mut"] }
quote = "1.0"
proc-macro2 = "1.0"
const-fnv1a-hash = "1.1"
